# rs-processor

./: .env  .gitignore  Cargo.toml
rs-commons/: Cargo.toml
rs-commons/migrations/: V10__arg_name.sql  V11__add_task_variable_in_item.sql  V12__task_worker.sql  V13__add_flow_to_task_worker.sql  V14__fix_indexes.sql  V15__add_what_to_worker.sql  V16__rename_some_columns.sql  V17__updte_udx_for_task_worker.sql  V1__init.sql  V2__add_tables.sql  V3__add_routes.sql  V4__tune_tables.sql  V5__fix_flow_element_arguments_table.sql  V6__fix_flow_element_argumwents_table.sql  V7__fix_constraints.sql  V8__new_constraints.sql  V9__fix_tables.sql
rs-commons/src/: lib.rs
rs-commons/src/adapters/: mod.rs  queue_publisher.rs
rs-commons/src/adapters/data_types/: float.rs  int.rs  mod.rs  number.rs  object.rs  string.rs
rs-commons/src/adapters/db/: client.rs  config.rs  db_migrations.rs  mod.rs
rs-commons/src/adapters/js_code/: mod.rs  vars.rs
rs-commons/src/adapters/models/: common_error.rs  data_type.rs  handlers.rs  mod.rs  process.rs  task.rs
rs-commons/src/adapters/task_engine/: mod.rs  task_engine_service.rs
rs-commons/src/adapters/task_handlers/: finish.rs  macro_mod.rs  mod.rs  script_handler.rs  simple.rs  starting.rs  test_handler.rs
rs-commons/src/config/: config.rs
rs-commons/src/db/: client.rs  config.rs  mod.rs
rs-commons/src/db/models/: data_type_db.rs  flow_db.rs  handlers_db.rs  mod.rs  process_db.rs  task_db.rs  task_worker_db.rs
rs-commons/src/db/repos/: core_repo.rs  flow_repo.rs  mod.rs  process_repo.rs  task_repo.rs  worker_repo.rs
rs-commons/src/db/services/: core_db_service.rs  flow_db_service.rs  mod.rs  process_db_service.rs  (+2 more)
rs-processor-app/: Cargo.toml
rs-processor-app/src/: main.rs
rs-processor-app/src/api/: api.rs  mod.rs  tasks_api.rs
rs-processor-app/src/app/: app_service.rs  mod.rs  queue_consumer.rs  worker_service.rs  workers.rs
(+13 files in other folders)
