[package]
name = "rs_commons"
version = "0.1.0"
edition = "2021"

[dependencies]

dotenv = "0.15.0"
envy = "0.4.2"

log = "0.4.17"
serde = "1.0.152"
serde_json = "1.0.92"

derive_more = "0.99.17"

deadpool-postgres = { version = "0.10.2", features = ["serde"] }
postgres-openssl = "0.5.0"
openssl = "0.10.43"
refinery = {version="0.8.6", features=["tokio-postgres"]}

tokio = {version="1.24.2", features=["full"]}

uuid = {version="1.3.0", features=["serde", "v4"]}

postgres = {version="0.19.4", features=["with-chrono-0_4", "with-uuid-1"]}
postgres-types = {version="0.2.4",features=["derive", "with-serde_json-1", "uuid-1"]}

chrono = {version="0.4.22", features=["serde"]}

async-trait = "0.1.64"

rhai = "1.12.0"
